--- a/Checkers.View/Checkers.View.csproj
+++ b/Checkers.View/Checkers.View.csproj
@@ -2,16 +2,21 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
+        <RootNamespace>Checkers</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
       <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.0.1641" />
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Checkers.Core\Checkers.Core.csproj" />
     </ItemGroup>
 
 </Project>
