--- a/Checkers.Genetic.FindBestGenome/Checkers.Genetic.FindBestGenome.csproj
+++ b/Checkers.Genetic.FindBestGenome/Checkers.Genetic.FindBestGenome.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>CheckersCore</RootNamespace>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Checkers.Genetic\Checkers.Genetic.csproj" />
+    </ItemGroup>
 
 </Project>
