Add animations + separate shared objects (WIP)

--- a/Checkers.View/Checkers.View.csproj
+++ b/Checkers.View/Checkers.View.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Checkers.Core\Checkers.Core.csproj" />
+      <ProjectReference Include="..\Sandbox.Shared\Sandbox.Shared.csproj" />
     </ItemGroup>
 
 </Project>
