--- a/Chess.View/Chess.View.csproj
+++ b/Chess.View/Chess.View.csproj
@@ -4,11 +4,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Configurations>Debug;Release</Configurations>
-        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Chess.Core\Chess.Core.csproj" />
+      <ProjectReference Include="..\Sandbox.Shared\Sandbox.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
       <PackageReference Include="MonoGame.Framework.Content.Pipeline" Version="3.8.0.1641" />
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     </ItemGroup>
